update newPurchase style NEED TO FIX PURCHASE NAME TEXT WRAP

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,8 @@
 main {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 2rem;
 }
 
@@ -33,7 +35,7 @@ main {
     flex-direction: column;
     gap: 2rem;
 
-    width: 90vw;
+    width: 95vw;
     padding: 2rem;
     background-color: white;
     border-radius: 1rem;
