--- a/src/components/newPurchase/newPurchase.scss
+++ b/src/components/newPurchase/newPurchase.scss
@@ -9,7 +9,6 @@
         flex-direction: column;
         gap: 1rem;
 
-        padding: 1rem;
         max-height: 32rem;
         overflow-y: auto;
     }
